test: test case refactor